# FaceQA-backend

./: .env  Dockerfile  README.md  compose.yaml  pyproject.toml
app/: main.py
app/api/dependencies/: db.py
app/api/routes/: router.py
app/api/routes/user/: user.py
app/api/v1/: router.py  routers.py
app/api/v1/endpoints/: api_keys.py  auth.py  credits.py  face_qa.py  user.py  users.py
app/core/: app_settings.py  security.py
app/core/database/: session.py
app/database/: session.py
app/db/: db_engine.py
app/db/models/user/: user.py
app/models/: __init__.py  api_key.py  api_token.py  credit_transaction.py  refresh_token.py  user.py
app/models/user/: user_model.py
app/repositories/: api_key.py  credit_transaction.py  refresh_token.py  user.py
app/repositories/user/: user_repository.py
app/schemas/: api_key.py  credits.py  faceqa.py  tokens.py  user.py
app/services/: api_key_service.py  credit_service.py  faceqa_service.py
migrations/: env.py
migrations/versions/: 124d5760dabd_adding_api_credits_collumn_to_users.py  2edfa18890fd_create_credit_transaction_model_and_.py  57e01117a156_adding_suffix_to_apikey_model.py  65daaaa4e605_create_apikeys_table.py  66f0eb1a1f56_apikey_table_set_user_id_init_false.py  8049c1cd4f0d_removing_refreshtoken.py  850268dcd38f_fix_refresh_token_datetime_timezone.py  ac7386f2fd2f_create_table_users.py  c0f53e37d680_refreshtoken_and_user_relationship.py
