[project]
name = "faceqa"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic (>=1.14.1,<2.0.0)",
    "fastapi[standard] (>=0.115.8,<0.116.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "pwdlib[argon2] (>=0.2.1,<0.3.0)",
    "sqlalchemy[asyncio] (>=2.0.38,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
]

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.6"
taskipy = "^1.14.1"
pytest = "^8.3.4"

[tool.poetry]
package-mode = false

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT' ]

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "./app/"
addopts = '-p no:warnings'

[tool.taskipy.tasks]
run = 'fastapi dev app/main.py'

pre_test = 'task lint'
test = 'pytest --cov=src -vv'
post_test = 'coverage html'

lint = 'ruff check . & ruff check . --diff'
format = 'ruff check . --fix & ruff format .'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"